--- a/style.css
+++ b/style.css
@@ -299,7 +299,7 @@ h2 {
 }
 
 .exposition-gallery img {
-  position: absolute;
+  position: relative;
   width: 100%;
   height: 100%;
   object-fit: cover;
